tests/fixtures/invalid/float_add_str.py
# Cannot add Float and Str
x: float = 1.0 + "hello"
